Fix bad API usage. Add test.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "babel-plugin-log-require",
   "scripts": {
     "prepublish": "npm run build",
-    "build": "babel src --out-dir=dist"
+    "build": "babel src --out-dir=dist",
+    "test": "npm run build && mocha"
   },
   "license": "MIT",
   "main": "dist/babel-plugin-log-require.js",
@@ -16,7 +17,9 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
     "@babel/core": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1"
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   },
   "peerDependencies": {
     "@babel/core": "^7.0.0-beta.47"
